--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -88,6 +88,21 @@
     background: rgba(0, 0, 0, 0.7);
 }
 
+#bucketmuncher-2017 {
+    background: #4F4F4F;
+    color: white;
+}
+
+#bucketmuncher-2017 a {
+    color: white;
+}
+
+#bucketmuncher-2017-main {
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(79, 79, 79, 0.5), rgba(79, 79, 79, 1)), url('../images/projects/sites/bucketmuncher-2017.png') center no-repeat!important;
+    background-size: cover!important;
+}
+
 #epic-lab {
     background: #326E32;
     color: white;
@@ -104,7 +119,7 @@
 }
 
 #personal-site {
-    background: #3e849b;
+    background: #167b5f;
     color: white;
 }
 
@@ -114,7 +129,7 @@
 
 #personal-site-main {
     height: 100%;
-    background: linear-gradient(to bottom, rgba(62, 132, 155, 0.5), rgba(62, 132, 155, 1)), url('../images/bg.jpg') center no-repeat!important;
+    background: linear-gradient(to bottom, rgba(22, 123, 95, 0.5), rgba(22, 123, 95, 1)), url('../images/bg.jpg') center no-repeat!important;
     background-size: cover!important;
 }
 
