Adding button to toggle older projects, hid older projects, added Terminal to familiar programs, added Marcel to portfolio

--- a/CSS/animations.css
+++ b/CSS/animations.css
@@ -1,3 +1,14 @@
+.project-visible {
+    position: static!important;
+    height: auto!important;
+}
+
+.external:nth-child(n+15) {
+    position: absolute;
+    left: -1000px;
+    height: 0;
+}
+
 @media (min-width: 768px) {
     .about-card[data-emergence=hidden] {
         opacity: 0;
