--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -88,6 +88,23 @@
     background: rgba(0, 0, 0, 0.7);
 }
 
+/* start */
+
+#marcel {
+    background: #089B91;
+    color: white;
+}
+
+#marcel a {
+    color: white;
+}
+
+#marcel-main {
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(8, 155, 145, 0.5), rgba(8, 155, 145, 1)), url('../images/projects/sites/marcel-background.jpg') center no-repeat!important;
+    background-size: cover!important;
+}
+
 #bucketmuncher-2017 {
     background: #4F4F4F;
     color: white;
@@ -99,7 +116,7 @@
 
 #bucketmuncher-2017-main {
     height: 100%;
-    background: linear-gradient(to bottom, rgba(79, 79, 79, 0.5), rgba(79, 79, 79, 1)), url('../images/projects/sites/bucketmuncher-2017.png') center no-repeat!important;
+    background: linear-gradient(to bottom, rgba(79, 79, 79, 0.5), rgba(79, 79, 79, 1)), url('../images/projects/sites/bucketmuncher-2017.jpg') center no-repeat!important;
     background-size: cover!important;
 }
 
